[package]
name = "wowser"
version = "0.0.1"
authors = ["Dustin Toff <me@dustintoff.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wowser-macros = { path = "../wowser-macros" }
wowser-glfw = { path = "../wowser-glfw" }
wowser-glfw-sys = { path = "../wowser-glfw-sys" }
regex = "1"
futures = "0.3"
