[package]
name = "wowser"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wowser-macros = { path = "../wowser-macros" }
wowser-gl = { path = "../wowser-gl" }
wowser-gl-sys = { path = "../wowser-gl-sys" }
wowser-glfw = { path = "../wowser-glfw" }
wowser-glfw-sys = { path = "../wowser-glfw-sys" }
fancy-regex.workspace = true
futures.workspace = true
futures-util.workspace = true
libc.workspace = true
lazy_static.workspace = true
